# arkinput

./: README.md  index.html  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  keyboard.rs  lib.rs  main.rs  models.rs  window.rs
src/components/: RecordItem.vue  Sidebar.vue
src/styles/: main.css
src/views/: Dashboard.vue  Records.vue  Settings.vue
